--- a/package.json
+++ b/package.json
@@ -3,10 +3,40 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "docs": "typedoc",
+    "docs:deploy": "bun run docs && bunx gh-pages -d docs/backend",
+    "e2e": "playwright test apps/e2e",
+    "lint": "bunx biome check",
+    "lint:fix": "bunx biome check --apply",
+    "openapi:lint": "bunx @redocly/cli lint",
+    "tsc": "bun tsc --noEmit",
+    "check": "bun run openapi:lint && bun run lint && bun run tsc",
+    "prepare": "husky install",
+    "storybook": "npx storybook dev -p 6006",
+    "storybook:build": "npx storybook build -c apps/frontend/.storybook -o apps/frontend/storybook-static",
+    "storybook:deploy": "npm run storybook:build && npx gh-pages -d apps/frontend/storybook-static"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@faker-js/faker": "^9.9.0",
+    "@playwright/test": "^1.54.1",
+    "@types/bun": "latest",
+    "@types/node": "^24.0.13",
+    "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "gh-pages": "^6.3.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.1.2",
+    "ts-pattern": "^5.7.1",
+    "tsconfig-paths": "^4.2.0",
+    "typedoc": "^0.28.7",
+    "wait-on": "^8.0.3"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": "bunx biome check --apply"
   }
 }
