--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "bunx --bun vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "format": "biome format . --write"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
