--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,31 +7,34 @@ on:
     branches: [main]
 
 jobs:
-  e2e:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: 🛠 Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
-      - name: Install dependencies
+      - name: 📦 Install root dependencies (for Playwright CLI)
         run: bun install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-
-      - name: Start frontend (Vite)
-        run: bun run dev &
+      - name: 📦 Install frontend dependencies
+        run: bun install
         working-directory: apps/frontend
 
-      - name: Wait for frontend to be ready
-        run: |
-          npx wait-on http://localhost:5173
+      - name: 🎭 Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-      - name: Run E2E tests
-        run: npx playwright test apps/e2e
+      - name: 🚀 Start Frontend (Vite)
+        run: bunx vite &
+        working-directory: apps/frontend
+
+      - name: ⏳ Wait for frontend to be ready
+        run: npx wait-on http://localhost:5173
+
+      - name: ✅ Run E2E Tests
+        run: bun run e2e
