feat: add Kafka and Cassandra services to Docker Compose
- Added Zookeeper service for Kafka.
- Configured Kafka service with necessary environment variables.
- Introduced Cassandra service with appropriate settings and volume.
- Updated Docker Compose file to include new services and their configurations.

chore: update package.json dependencies

- Added @redocly/openapi-core and kafkajs for API documentation and Kafka integration.
- Updated openapi-typescript to the latest version.

--- a/apps/backend/spec/index.yml
+++ b/apps/backend/spec/index.yml
@@ -26,8 +26,11 @@ paths:
                     type: string
                   orderId:
                     type: string
+                    format: uuid
         "400":
           description: Invalid request
+        "500":
+          description: Internal server error
 
 components:
   schemas:
@@ -36,9 +39,12 @@ components:
       required:
         - userId
         - totalAmount
+        - status
       properties:
         userId:
           type: string
           format: uuid
         totalAmount:
           type: number
+        status:
+          type: string
