--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,6 +13,38 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
+  
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    ports:
+      - "2181:2181"
 
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  cassandra:
+     image: cassandra:4.1
+     ports:
+      - "9042:9042"
+     environment:
+      CASSANDRA_CLUSTER_NAME: "ordexa-cluster"
+      CASSANDRA_DC: "dc1"
+      CASSANDRA_RACK: "rack1"
+      CASSANDRA_NUM_TOKENS: 8
+     volumes:
+      - cassandra-data:/var/lib/cassandra
+      
 volumes:
   pgdata:
+  cassandra-data:
