--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.54.1",
+    "@redocly/openapi-core": "^1.34.3",
     "@types/bun": "latest",
     "@types/node": "^24.0.13",
     "eslint": "^9.30.1",
@@ -27,7 +28,9 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "gh-pages": "^6.3.0",
     "husky": "^8.0.0",
+    "kafkajs": "^2.2.4",
     "lint-staged": "^16.1.2",
+    "openapi-typescript": "^7.8.0",
     "ts-pattern": "^5.7.1",
     "tsconfig-paths": "^4.2.0",
     "typedoc": "^0.28.7",
