feat: implement order processing with Kafka and Cassandra integration

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "bun src/index.ts",
-    "generate:types": "openapi-typescript ./spec/index.yml --output ./src/types/api.d.ts"
+    "generate:types": "openapi-typescript ./spec/index.yml --output ./src/types/api.d.ts",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "latest",
