--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@redocly/openapi-core": "^1.34.3",
     "@types/bun": "latest",
     "@types/node": "^24.0.13",
+    "bun-types": "^1.2.18",
     "eslint": "^9.30.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-unused-imports": "^4.1.4",
