--- a/apps/backend/spec/index.yml
+++ b/apps/backend/spec/index.yml
@@ -1,3 +1,75 @@
+# openapi: 3.1.0
+# info:
+#   title: Ordexa API
+#   version: 1.0.0
+
+# paths:
+#   /orders:
+#     post:
+#       summary: Create a new order
+#       operationId: createOrder
+#       requestBody:
+#         required: true
+#         content:
+#           application/json:
+#             schema:
+#               $ref: "#/components/schemas/OrderInput"
+#       responses:
+#         "201":
+#           description: Order created successfully
+#           content:
+#             application/json:
+#               schema:
+#                 type: object
+#                 properties:
+#                   message:
+#                     type: string
+#                   orderId:
+#                     type: string
+#                     format: uuid
+#         "400":
+#           description: Invalid request
+#         "500":
+#           description: Internal server error
+
+#   api/orders/{userId}:
+#     get:
+#       parameters:
+#         - in: path
+#           name: userId
+#           required: true
+#           schema:
+#             type: string
+#         - in: query
+#           name: cursor
+#           required: false
+#           schema:
+#             type: string
+#         - in: query
+#           name: limit
+#           required: false
+#           schema:
+#             type: integer
+
+# components:
+#   schemas:
+#     OrderInput:
+#       type: object
+#       required:
+#         - userId
+#         - totalAmount
+#         - status
+#       properties:
+#         userId:
+#           type: string
+#           format: uuid
+#         totalAmount:
+#           type: number
+#         status:
+#           type: string
+
+
+
 openapi: 3.1.0
 info:
   title: Ordexa API
@@ -27,6 +99,45 @@ paths:
                   orderId:
                     type: string
                     format: uuid
+        "400":
+          description: Invalid request
+        "500":
+          description: Internal server error
+
+  /api/orders/{userId}:   # ✅ Corrected with leading slash
+    get:
+      summary: Get orders for a user
+      operationId: getOrdersByUser
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: cursor
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                  nextCursor:
+                    type: string
         "400":
           description: Invalid request
         "500":
