--- a/apps/backend/spec/index.yml
+++ b/apps/backend/spec/index.yml
@@ -1,75 +1,3 @@
-# openapi: 3.1.0
-# info:
-#   title: Ordexa API
-#   version: 1.0.0
-
-# paths:
-#   /orders:
-#     post:
-#       summary: Create a new order
-#       operationId: createOrder
-#       requestBody:
-#         required: true
-#         content:
-#           application/json:
-#             schema:
-#               $ref: "#/components/schemas/OrderInput"
-#       responses:
-#         "201":
-#           description: Order created successfully
-#           content:
-#             application/json:
-#               schema:
-#                 type: object
-#                 properties:
-#                   message:
-#                     type: string
-#                   orderId:
-#                     type: string
-#                     format: uuid
-#         "400":
-#           description: Invalid request
-#         "500":
-#           description: Internal server error
-
-#   api/orders/{userId}:
-#     get:
-#       parameters:
-#         - in: path
-#           name: userId
-#           required: true
-#           schema:
-#             type: string
-#         - in: query
-#           name: cursor
-#           required: false
-#           schema:
-#             type: string
-#         - in: query
-#           name: limit
-#           required: false
-#           schema:
-#             type: integer
-
-# components:
-#   schemas:
-#     OrderInput:
-#       type: object
-#       required:
-#         - userId
-#         - totalAmount
-#         - status
-#       properties:
-#         userId:
-#           type: string
-#           format: uuid
-#         totalAmount:
-#           type: number
-#         status:
-#           type: string
-
-
-
 openapi: 3.1.0
 info:
   title: Ordexa API
@@ -103,46 +31,31 @@ paths:
           description: Invalid request
         "500":
           description: Internal server error
-
-  /api/orders/{userId}:   # ✅ Corrected with leading slash
+          
+  /api/orders/{userId}:
     get:
-      summary: Get orders for a user
       operationId: getOrdersByUser
       parameters:
-        - in: path
-          name: userId
+        - name: userId
+          in: path
           required: true
           schema:
             type: string
-        - in: query
-          name: cursor
+        - name: limit
+          in: query
           required: false
           schema:
-            type: string
-        - in: query
-          name: limit
+            type: integer
+        - name: offset
+          in: query
           required: false
           schema:
             type: integer
       responses:
-        "200":
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    type: array
-                    items:
-                      type: object
-                  nextCursor:
-                    type: string
-        "400":
-          description: Invalid request
-        "500":
-          description: Internal server error
-
+        '200':
+          description: List of orders
+  
+    
 components:
   schemas:
     OrderInput:
