--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pino": "^7.0.5",
     "@types/uuid": "^10.0.0",
-    "bun-types": "^1.2.18"
+    "bun-types": "^1.2.18",
+    "pino": "^9.8.0"
   },
   "peerDependencies": {
     "typescript": "^5"
