--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,9 +9,9 @@
     "test": "bun test",
     "kafka:consumer": "bun run kafka/consumer/index.ts",
     "db:reset": "bunx prisma migrate reset --force && bunx prisma generate && bun run prisma/seed.ts",
-    "check:postgres": "bun run scripts/dev/checkSeed.ts",
+    "check:postgres": "bun run scripts/dev/checks/checkPostgres.ts",
     "seed:cassandra": "bun run scripts/dev/seedCassandra.ts",
-    "check:cassandra": "bun run scripts/dev/checkCassandra.ts"
+    "check:cassandra": "bun run scripts/dev/checks/checkCassandra.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
