--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-router": "^1.131.27",
     "axios": "^1.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
