--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,16 +25,22 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^14.1.1",
-    "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/exporter-logs-otlp-http": "0.52.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "0.52.1",
-    "@opentelemetry/exporter-trace-otlp-http": "0.52.1",
-    "@opentelemetry/resources": "1.9.0",
-    "@opentelemetry/sdk-logs": "0.52.1",
-    "@opentelemetry/sdk-metrics": "1.9.0",
-    "@opentelemetry/sdk-trace-node": "1.9.0",
-    "@opentelemetry/semantic-conventions": "1.27.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/instrumentation-cassandra-driver": "^0.49.0",
+    "@opentelemetry/instrumentation-kafkajs": "^0.13.0",
+    "@opentelemetry/instrumentation-pg": "^0.56.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@prisma/client": "^6.11.1",
+    "@prisma/instrumentation": "^6.14.0",
     "cassandra-driver": "^4.8.0",
     "chalk": "^5.5.0",
     "cli-table3": "^0.6.5",
