--- a/infra/otel-collector.yaml
+++ b/infra/otel-collector.yaml
@@ -4,49 +4,20 @@ receivers:
       grpc:
       http:
 
-processors:
-  memory_limiter:
-    check_interval: 2s
-    limit_percentage: 75
-    spike_limit_percentage: 15
-  batch:
-    timeout: 2s
-    send_batch_size: 8192
-  attributes/redact_pii:
-    actions:
-      - key: user.email
-        action: delete
-
 exporters:
   jaeger:
-    endpoint: jaeger:14250
+    endpoint: "jaeger:14250"
     tls:
       insecure: true
-  loki:
-    endpoint: http://loki:3100/loki/api/v1/push
-    default_labels_enabled:
-      exporter: true
-      job: true
   prometheus:
-    endpoint: 0.0.0.0:8889
-    send_timestamps: true
-    metric_expiration: 5m
-    resource_to_telemetry_conversion:
-      enabled: true
-  debug:
-    verbosity: basic
+    endpoint: "0.0.0.0:8889"
+  debug: {}   # no logLevel, must be empty
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [jaeger]
+      exporters: [jaeger, debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [prometheus]
-    logs:
-      receivers: [otlp]
-      processors: [memory_limiter, batch, attributes/redact_pii]
-      exporters: [loki]
+      exporters: [prometheus, debug]
