--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,13 +13,15 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
+    networks:
+      - observability
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
     ports: 
       - "2181:2181"
+    networks:
+      - observability
 
   kafka:
     image: confluentinc/cp-kafka:7.5.0
@@ -32,6 +34,8 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - observability
 
   cassandra:
     image: cassandra:4.1
@@ -44,6 +48,8 @@ services:
       CASSANDRA_NUM_TOKENS: 8
     volumes:
       - cassandra-data:/var/lib/cassandra
+    networks:
+      - observability
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:latest
@@ -51,19 +57,24 @@ services:
     volumes:
       - ./otel-collector.yaml:/etc/otel-collector.yaml:ro
     ports:
-      - "4317:4317"   # OTLP gRPC
-      - "4318:4318"   # OTLP HTTP
-      - "8889:8889"   # Prometheus scrape (Collector metrics exporter)
+      - "4317:4317"
+      - "4318:4318"
+      - "8889:8889"
     restart: unless-stopped
+    networks:
+      - observability
 
   jaeger:
-    image: jaegertracing/all-in-one:latest
-    environment:
-      COLLECTOR_OTLP_ENABLED: "true"
+    image: jaegertracing/all-in-one:1.57
+    container_name: jaeger
     ports:
-      - "16686:16686" # Jaeger UI
-      - "14250:14250" # gRPC ingest (from Collector)
-    restart: unless-stopped
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - observability
 
   loki:
     image: grafana/loki:2.9.8
@@ -71,27 +82,35 @@ services:
     ports:
       - "3100:3100"
     restart: unless-stopped
+    networks:
+      - observability
 
   prometheus:
-    image: prom/prometheus:latest
-    volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yml:ro
-    command: ["--config.file=/etc/prometheus/prometheus.yml"]
+    image: prom/prometheus
+    container_name: prometheus
     ports:
       - "9090:9090"
-    restart: unless-stopped
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      - observability
 
   grafana:
-    image: grafana/grafana:latest
-    environment:
-      GF_SECURITY_ADMIN_PASSWORD: admin
-    volumes:
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+    image: grafana/grafana
+    container_name: grafana
     ports:
-      - "3001:3000"
-    depends_on: [prometheus, loki, jaeger]
-    restart: unless-stopped
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - observability
 
 volumes:
   pgdata:
   cassandra-data:
+
+networks:
+  observability:
+    driver: bridge
